--- a/Float/TestFloat.html
+++ b/Float/TestFloat.html
@@ -1,1 +1,37 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Document</title>
+	<style type="text/css">
+		#div6 {
+		    margin-bottom: 10px;
+		}
+		.div6-a {
+		    float: left;
+		    width: 50px;
+		    height: 50px;
+		    background: #f00;
+		}
+		.div6-b {
+		    margin: 0 50px;
+		    height: 50px;
+		    background: #00f;
+		}
+		.div6-c {
+		    float: right;
+		    width: 50px;
+		    height: 50px;
+		    background: #ff0;
+		}
+	</style>
+</head>
+<body>
+	<div id="div6">
+	    <div class="div6-a"></div>
+	    <!--<div class="div6-b"></div>-->
+	    <div class="div6-c"></div>
+	    <div class="div6-b"></div>
+	</div>
+</body>
+</html>
